# Maze

./: .gitignore  CMakeLists.txt
res/shaders/: fragment.glsl  fragment_tex.glsl  vertex.glsl
src/: helpers.cpp  helpers.h  main.cpp  maze.cpp  maze.h
src/Application/: app.cpp  app.h  scene_bulder.cpp  scene_bulder.h  scene_manager.cpp  scene_manager.h  window.cpp  window.h
src/Rendering/: buffer_layout.cpp  buffer_layout.h  camera3d.cpp  camera3d.h  gl_buff_container.cpp  gl_buff_container.h  index_buffer.h  index_buffer_static.cpp  index_buffer_static.h  shader.cpp  shader.h  static_renderable.cpp  static_renderable.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h  vertex_buffer_static.cpp  vertex_buffer_static.h
src/Shapes/: cube.cpp  cube.h  line.cpp  line.h  renderable_shape.h  sphere.cpp  sphere.h  vertex.h
